--- a/index.html
+++ b/index.html
@@ -49,10 +49,16 @@
                 
         <div id="objective">
             <p>
-                Full stack software engineer with special expertise in web development, e-commerce, APIs and web services. Comfortable implementing great user experiences, managing server side scalability and concurrency, designing database schemas and batch processing jobs, and deploying and admining servers. Experienced in building sophisticated distributed systems using REST web APIs. Product focused and deeply passionate about solving interesting problems.
-
-                As a FOSS advocate, i actively contribute to open source projects (see my GitHub profile) because it is a way to develop great software that benefits both the contributor and the community.
+                 Full stack software engineer with special expertise in web development, e-commerce, APIs and web services. 
+                 Comfortable implementing great user experiences, managing server side scalability and concurrency, 
+                 designing database schemas and batch processing jobs, and deploying and admining servers. 
+                 Experienced in building sophisticated distributed systems using REST web APIs. 
+                 Product focused and deeply passionate about solving interesting problems.           
             </p>
+             <p>
+                  As a FOSS advocate, i actively contribute to open source projects (see my GitHub profile) because it is 
+                  a way to develop great software that benefits both the contributor and the community.
+             </p>
         </div>
         
         <div class="clear"></div>
