--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Mohamed Marrouchi</title>
+	
     <style type="text/css">
+        @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css);
         * {
             margin: 0;
             padding: 0;
