Fix social links style

--- a/index.html
+++ b/index.html
@@ -99,10 +99,15 @@
             padding: 0;
             list-style: none;
         }
+    	a {
+	    text-decoration: none;
+	}
+	p > a:hover{
+	    text-decoration:  underline;
+	}
         .footer-social-icons {
             width: 350px;
             display: block;
-            margin: 0 auto;
         }
         .social-icon {
             color: #fff;
@@ -155,7 +160,7 @@
         .fa-rss:hover {
             background-color: #eb8231;
         }
-        .fa-youtube {
+        .fa-github {
             padding: 10px 14px;
             -o-transition: .5s;
             -ms-transition: .5s;
@@ -164,7 +169,7 @@
             transition: .5s;
             background-color: #322f30;
         }
-        .fa-youtube:hover {
+        .fa-github:hover {
             background-color: #e64a41;
         }
         .fa-linkedin {
@@ -210,8 +215,10 @@
                         <a href="https://twitter.com/MedMarrouchi" class="social-icon"> <i class="fa fa-twitter"></i>
                         </a>
                     </li>
-                    <!--<li><a href="" class="social-icon"> <i class="fa fa-rss"></i></a></li>
-							<li><a href="" class="social-icon"> <i class="fa fa-youtube"></i></a></li>-->
+                    <!--<li><a href="" class="social-icon"> <i class="fa fa-rss"></i></a></li>-->
+		    <li>
+		        <a href="https://github.com/marrouchi" class="social-icon"> <i class="fa fa-github"></i></a>
+		    </li>
                     <li>
                         <a href="https://www.linkedin.com/in/mohamed-marrouchi-294a68a8/" class="social-icon"> <i class="fa fa-linkedin"></i>
                         </a>
