Fix github color

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             background-color: #322f30;
         }
         .fa-github:hover {
-            background-color: #e64a41;
+            background-color: #909090;
         }
         .fa-linkedin {
             padding: 10px 14px;
