--- a/index.html
+++ b/index.html
@@ -99,16 +99,18 @@
             padding: 0;
             list-style: none;
         }
-    	a {
-	    text-decoration: none;
-	}
-	p > a:hover{
-	    text-decoration:  underline;
-	}
+    	
         .footer-social-icons {
             width: 350px;
             display: block;
         }
+        .footer-social-icons a {
+	    text-decoration: none;
+	    border: 0;
+	}
+	.footer-social-icons p > a:hover{
+	    text-decoration:  underline;
+	}
         .social-icon {
             color: #fff;
         }
