No margin left for social links

--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
             width: 350px;
             display: block;
         }
+        .footer-social-icons ul {
+            margin-left: 0;
+        }
         .footer-social-icons a {
 	    text-decoration: none;
 	    border: 0;
