--- a/index.html
+++ b/index.html
@@ -249,18 +249,21 @@
             <dd class="clear"></dd>
             <dt>Education</dt>
             <dd>
-                <h2>Diploma, Software Engineering | High Institute Of Computer Sciences, Ariana Tunisia</h2>
+                <h2>Diploma, Software Engineering</h2>
+		<h3>| High Institute Of Computer Sciences, Ariana Tunisia</h3>
                 <p><strong>2008 - 2011</strong>
                     <br /> Software Development
                 </p>
             </dd>
             <dd>
-                <h2>Diploma, Information Systems & Communication Technologies | High Institute Of Computer Sciences, Ariana Tunisia</h2>
+                <h2>Diploma, Information Systems & Communication Technologies</h2>
+		<h3>| High Institute Of Computer Sciences, Ariana Tunisia</h3>
                 <p><strong>2005 - 2008</strong>
                 </p>
             </dd>
             <dd>
-                <h2>Bachelors, Technologies Science | Kelibia High School, Tunisia</h2>
+                <h2>Bachelors, Technologies Science</h2>
+		<h3>| Kelibia High School, Tunisia</h3>
                 <p><strong>2000 - 2005</strong>
                 </p>
             </dd>
