Adding sub-title

--- a/index.html
+++ b/index.html
@@ -210,6 +210,7 @@
         <div id="contact-info" class="vcard">
             <!-- Microformats! -->
             <h1 class="fn">Mohamed Marrouchi</h1>
+            <h3>Software Engineer, Web Expert & FOSS Advocate</h3>
             <div class="footer-social-icons">
                 <ul class="social-icons">
                     <li>
