--- a/index.html
+++ b/index.html
@@ -244,6 +244,18 @@
 			<div class="clear"></div>
 			<dl>
 				<dd class="clear"></dd>
+				<dt>Volounteering & Contribution</dt>
+				<dd>
+					<h2>Freeways Association president</h2>
+					<p><a href="http://www.freeways.tn" target="_blank">Freeways</a> is a tunisian association for promoting FOSS.</p>
+					<h2>OpenStreetMap Contributor</h2>
+					<p>Member of OSM Tunisia active Community : <a href="https://www.openstreetmap.org/user/marrouchi" target="_blank">https://www.openstreetmap.org/user/marrouchi</a></p>
+					<h2>PrestaShop Tunisia Ambassador</h2>
+					<p>Active member of PrestaShop Tunisian Community : <a href="https://ambassadors.prestashop.com/ambassador/mohamed-marrouchi">https://ambassadors.prestashop.com/ambassador/mohamed-marrouchi</a></p>
+					<h2>Joomla Contributor</h2>
+					<p>Contributor in Joomla Bug Squad Team : <a href="https://volunteers.joomla.org/joomlers/1868-mohamed-marrouchi" target="_blank">https://volunteers.joomla.org/joomlers/1868-mohamed-marrouchi</a></p>
+				</dd>
+				<dd class="clear"></dd>
 				<dt>Skills</dt>
 				<dd>
 					<h2>Web Development</h2>
