--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 			<div class="clear"></div>
 			<dl>
 				<dd class="clear"></dd>
-				<dt>Volounteering & Contribution</dt>
+				<dt>Volounteering & Contributing</dt>
 				<dd>
 					<h2>Freeways Association President</h2>
 					<p>Freeways is a tunisian association for promoting FOSS : <a href="http://www.freeways.tn" target="_blank">http://www.freeways.tn</a></p>
