--- a/index.html
+++ b/index.html
@@ -339,6 +339,12 @@
 				<dt>References</dt>
 				<dd>Available on request</dd>
 				<dd class="clear"></dd>
+				<dt>Hourly Rate</dt>
+				<dd>
+					<p>I usually charge 25$/hr but it may depend on the project's nature.</p>
+					<p>Please feel free to get in touch or invite me to grab some coffee :)</p>
+				</dd>
+				<dd class="clear"></dd>
 			</dl>
 			<div class="clear"></div>
 		</div>
