Adding language skills

--- a/index.html
+++ b/index.html
@@ -336,6 +336,15 @@
 				<dt>Hobbies</dt>
 				<dd>IT & Web technlogies, OpenSource & FreeSoftware, Management, Music</dd>
 				<dd class="clear"></dd>
+				<dt>Language Skills</dt>
+				<dd>
+					<ul>
+						<li>English: Upper intermediate (IELTS certified)</li>
+						<li>French: Advanced (TEF certified)</li>
+						<li>Arabic: Mother Tongue</li>
+					</ul>
+				</dd>
+				<dd class="clear"></dd>
 				<dt>References</dt>
 				<dd>Available on request</dd>
 				<dd class="clear"></dd>
