Adding mobile experience

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 					<h2>Webservices</h2>
 					<p>SOAP, REST, XML & JSON</p>
 					<h2>Misc</h2>
-					<p>SailsJs, VueJs, jQuery, Git/SVN, Linux</p>
+					<p>SailsJs, VueJs, jQuery, Git/SVN, Linux, Cordova/Ionic</p>
 				</dd>
 				<dd class="clear"></dd>
 				<dt>Experience</dt>
