--- a/index.html
+++ b/index.html
@@ -334,7 +334,14 @@
 				<dd class="clear"></dd>
 				<dd class="clear"></dd>
 				<dt>Hobbies</dt>
-				<dd>IT & Web technlogies, OpenSource & FreeSoftware, Management, Music</dd>
+				<dd>
+					<ul>
+						<li>IT & Web technlogies</li>
+						<li>OpenSource & FreeSoftware</li>
+						<li>Management</li>
+						<li>Music</li>
+					</ul>
+				</dd>
 				<dd class="clear"></dd>
 				<dt>Language Skills</dt>
 				<dd>
