--- a/index.html
+++ b/index.html
@@ -246,6 +246,8 @@
 					<p>Freeways is a tunisian association for promoting FOSS : <a href="http://www.freeways.tn" target="_blank">http://www.freeways.tn</a></p>
 					<h2>OpenStreetMap Contributor</h2>
 					<p>Member of OSM Tunisia Community : <a href="https://www.openstreetmap.org/user/marrouchi" target="_blank">https://www.openstreetmap.org/user/marrouchi</a></p>
+					<h2>Drupal Contributor</h2>
+					<p><a href="https://www.drupal.org/u/mohamedmarrouchi">https://www.drupal.org/u/mohamedmarrouchi</a></p>
 					<h2>PrestaShop Tunisia Ambassador</h2>
 					<p>Active member of PrestaShop Tunisian Community : <a href="https://ambassadors.prestashop.com/ambassador/mohamed-marrouchi">https://ambassadors.prestashop.com/ambassador/mohamed-marrouchi</a></p>
 					<h2>Joomla Contributor</h2>
