Adding resume json file

--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@ icon.large {
 	<div class="container" id="resume">
 			<div id="card" class="row">
 				<div class="col-xs-3 col-sm-4">
-					<img class="avatar" src="http://marrouchi.com/images/marrouchi.png"/>
+					<img class="avatar" src="http://marrouchi.com/images/marrouchi.jpg"/>
 				</div>
 				<div class="col-xs-9 col-sm-8">
 					<h1>Mohamed Marrouchi</h1>
