--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 	<title>Mohamed Marrouchi</title>
 
-	<link href="http://bootswatch.com/lumen/bootstrap.min.css" rel="stylesheet">
+	<link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css" rel="stylesheet">
 	<link href='http://fonts.googleapis.com/css?family=Roboto:500,300' rel='stylesheet' type='text/css'>
 	<style>
 	body {
